--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.6  # or latest version
+  shared_preferences: ^2.2.2  # check for latest version on pub.dev
+  provider: ^6.1.2  # check pub.dev for latest
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
