--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,27 +1,35 @@
-name: Flutter Build
+name: Flutter Android Build
 
 on:
   push:
     branches:
-      - main
+      - main    # or your default branch name
+  pull_request:
 
 jobs:
-  build:
+  build_android:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: 'stable'  # or specify a version, e.g. 3.7.0
 
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Run Flutter analyze
+        run: flutter analyze
+
       - name: Build APK
         run: flutter build apk --release
 
-      - name: List APK files
-        run: ls build/app/outputs/flutter-apk/
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-release.apk
+          path: build/app/outputs/flutter-apk/app-release.apk
